--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ header {
 }
 
 .nav-link:hover {
-    color: #007bff;
+  color: #007bff;
 }
 
 section {
@@ -60,7 +60,7 @@ section {
   padding: 10px;
   border-radius: 10px;
   width: 300px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -104,16 +104,16 @@ footer {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .perfume-grid {
-        flex-direction: column;
-        align-items: center;
-    }
+  .perfume-grid {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    #nav-bar {
-        flex-direction: column;
-    }
+  #nav-bar {
+    flex-direction: column;
+  }
 
-    .nav-link {
-        margin: 10px 0;
-    }
+  .nav-link {
+    margin: 10px 0;
+  }
 }
